# dbhandler

./: '  .anjuta_sym_db.db  .gitignore  Makefile-files  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  build.sh  config.guess  config.h.in  config.sub  configure  configure.ac  draft.db  git_log
dbhandler/: Info.plist  Makefile-files  Makefile.am  Makefile.in  UpgradeLog.XML  build.sh  build_app  configure.ac  dbhandler Preferences  dbhandler-Info.plist  doc.cpp  doc.h  doc.xpm  docview.cpp  docview.cpp~  docview.h  docview.rc  docview_vc10.sln  docview_vc10.vcxproj  docview_vc7.vcproj  docview_vc8.vcproj  docview_vc9.sln  docview_vc9.vcproj  docview_vc9.vcxproj  docview_vc9.vcxproj.filters  mainframe.cpp  mainframe.cpp~  mainframe.h  mainframe.h~  makefile.gcc  makefile.vc  newtablehandler.cpp  newtablehandler.h  notepad.xpm  odbc.h  query,c  query.c  query.h  resource.h  sample.rc  (+8 more)
libdatabaseview/: Makefile.am  Makefile.in  databasecanvas.cpp  databasecanvas.h  databasedoc.cpp  databasedoc.h  databaseview.cpp  databaseview.h  dbview.cpp  dbview.vcxproj
libdbloader/: Makefile-files  Makefile.am  Makefile.in  dbloader.cpp  dbloader.cpp~  dbloader.vcxproj  dbloader10.vcxproj  my_dll.cpp
libdbwindow/: CreateForeignKey.cpp  CreateForeignKey.h  ErdForeignKey.cpp  ErdForeignKey.h  ErdLineShape.cpp  ErdLineShape.h  ErdPanel.h  ErdTable.cpp  ErdTable.h  ErdView.h  FieldComment.cpp  FieldComment.h  FieldShape.cpp  FieldShape.h  FrameCanvas.cpp  FrameCanvas.h  GUIColumn.cpp  GUIColumn.h  GUIDatabaseTable.cpp  GUIDatabaseTable.h  GridTableShape.cpp  GridTableShape.h  HeaderGrid.cpp  HeaderGrid.h  IDbAdapter.h  IDbType.h  KeyBitmap.cpp  KeyBitmap.h  Makefile-files  Makefile.am  Makefile.in  MyErdTable.cpp  MyErdTable.h  NArrow.h  TableSettings.cpp  TableSettings.h  bold.h  centeralign.h  column.cpp  column.h  (+55 more)
libdialogs/: Makefile-files  Makefile.am  Makefile.in  addcolumnsdialog.cpp  addcolumnsdialog.h  arguments.c  attachdb.cpp  attachdb.h  bitmappanel.cpp  bitmappanel.h  createdatabase.cpp  createdatabase.h  createindex.cpp  createindex.h  createindexnew.cpp  createindexpostgres.cpp  createindexpostgres.h  createindexsqlserver.cpp  createindexsqlserver.h  createtablespace.cpp  createtablespace.h  createviewoptions.cpp  createviewoptions.h  databasetype.cpp  databasetype.cpp~  databasetype.h  datasource.cpp  datasource.h  detachdb.cpp  detachdb.h  dialogs.cpp  dialogs.h  dialogs.vcxproj  dialogs.vcxproj.filters  displayformatdefinition.cpp  displayformatdefinition.h  dll_vc9_my_dll.vcproj  dll_vc9_my_dll.vcxproj  dll_vc9_my_dll.vcxproj.filters  dropindexoptions.cpp  (+44 more)
libfieldswindow/: Makefile-files  Makefile.am  Makefile.in  definitions.h  field.cpp  field.h  fieldswindow.cpp  fieldswindow.vcxproj  fieldswindow.vcxproj.filters  fieldswindow10.vcxproj  fieldwindow.cpp  fieldwindow.h
libhelpers/: Makefile.am  ablbaseview.cpp  ablbaseview.h  colorcombobox.cpp  colorcombobox.h  configuration.h  guiobjectsproperties.h  guiojectsproperties.h  helpers.filters  helpers.vcxproj  helpers.vcxproj.filters  libhelpers.vcxproj  libhelpers.vcxproj.filters  maskededit.cpp  maskededit.h  mycombocelleditor.cpp  mycombocelleditor.h  mycombocellrenderer.cpp  mycombocellrenderer.h  mytabletypeeditor.cpp  mytabletypeeditor.h  painterobjects.h  propertieshandlerbase.h  scrolledcolumnlabel.cpp  scrolledcolumnlabel.h  typecombobox.cpp  typecombobox.h
liblibrary/: Makefile.am  liblibrary.rc  library.cpp  library.vcxproj  library.vcxproj.filters  library10.vcxproj  libraryclosed.h  librarydoctemplate.cpp  librarydoctemplate.h  librarydocument.cpp  librarydocument.h  libraryopen.h  librarytemplate.cpp  librarytemplate.h  libraryview.cpp  libraryview.h  resource.h  selectall.h  setfilter.cpp
libmysql/: Makefile-files  Makefile.am  Makefile.in  database_mysql.cpp  database_mysql.h  mysql.sdf  mysql.vcxproj  mysql10.vcxproj
libodbc/: Makefile-files  Makefile.am  Makefile.in  database_odbc.cpp  database_odbc.cpp~  database_odbc.cpp~RF384eb21c.TMP  database_odbc.cpp~RF3c7f426a.TMP  database_odbc.h  odbc.cpp  odbc.vcxproj  odbc10.vcxproj  sqlserverscript.h
libpostgres/: Makefile-files  Makefile.am  Makefile.in  database_postgres.cpp  database_postgres.h  postgres.vcxproj  postgres10.vcxproj
libpropertieshandlers/: Makefile-files  Makefile.am  Makefile.in  databaseoptionshandler.cpp  databaseoptionshandler.h  designpropertieshandler.cpp  designpropertieshandler.h  dividerpropertieshandler.cpp  dividerpropertieshandler.h  fieldpropertieshandler.cpp  fieldpropertieshandler.h  labelpropertieshandler.cpp  labelpropertieshandler.h  librarypainterpopertieshandler.cpp  librarypainterpropertieshandler.h  librarypropertieshandler.cpp  librarypropertieshandler.h  propertieshandler.cpp  propertieshandler.h  propertieshandlerbase.h  propertieshandlers.vcxproj  propertieshandlers.vcxproj.filters
libpropertypages/: Makefile-files  Makefile.am  Makefile.in  bandgeneral.cpp  bandgeneral.h  colorcombobox.cpp  colorcombobox.h  columnspec.cpp  columnspec.h  databasefielddisplay.cpp  databasefielddisplay.h  databaseoptioncolours.cpp  databaseoptioncolours.h  databaseoptioncolurs.cpp  databaseoptiongeneral.cpp  databaseoptionsgeneral.h  designfieldgeneral.h  designgeneral.cpp  designgeneral.h  designlabelgeneral.cpp  designlabelgeneral.h  fieldgeneral.cpp  fieldgeneral.h  fieldheader.cpp  fieldheader.h  fieldstyles.cpp  fieldstyles.h  fieldvalidation.cpp  fieldvalidation.h  fontpropertypage.cpp  fontpropertypage.h  fontpropertypagebase.cpp  fontpropertypagebase.h  groupbypage.cpp  indexproperties.cpp  indexproperties.h  labelfieldgeneral.cpp  labelfieldgeneral.h  libraryobjectpropertypage.cpp  libraryobjectpropertypage.h  (+30 more)
libshapeframework/: AutoLayout.cpp  CircleArrow.cpp  CommonFcn.cpp  CurveShape.cpp  DiagramManager.cpp  DiagramManager.h  DiamondArrow.cpp  EditTextShape.cpp  EllipseShape.cpp  FixedRectShape.cpp  FlexGridShape.cpp  GridShape.cpp  LineShape.cpp  Makefile-files  Makefile.am  Makefile.in  Printout.cpp  RoundOrthoShape.cpp  SFEvents.cpp  ShapeBase.cpp  ShapeBaseXml.cpp  ShapeCanvas.cpp  (+7 more)
(+6101 files in other folders)
