## Process this file with automake to produce Makefile.in
## Created by Anjuta

ACLOCAL_AMFLAGS = -I auto-m4 -I m4

EXTRA_DIST =

SUBDIRS = dbinterface libsqlite libodbc libpostgres libmysql libshapeframework libdbloader libfieldswindow libpropertypages libdialogs libpropertieshandlers libtabledataedit libdbwindow libtablewindow po dbhandler

dist_doc_DATA = COPYING

DISTCLEANFILES = \
	po/.intltool-merge-cache

include m4/Makefile-files
