## Process this file with automake to produce Makefile.in


lib_LIBRARIES =  \
	libhelpers.a

libhelpers_a_SOURCES =  \
	painterobjects.h \
	typecombobox.cpp \
	typecombobox.h \
	colorcombobox.cpp \
	colorcombobox.h \
	ablbaseview.cpp \
	ablbaseview.h

libhelpers_a_CXXFLAGS = -fPIC \
	@WX_CXXFLAGS@

libhelpers_a_LDFLAGS = @WX_LDFLAGS@
